# market-making

./: .gitignore  package.json
rust_mm_bot/: Cargo.toml
rust_mm_bot/src/: accountinfoservice.rs  chainmetaservice.rs  cyphergroup.rs  fasttxnbuilder.rs  main.rs  mm_client.rs  serumslab.rs
rust_mm_bot/src/math/: fracmaths.rs  inventorymanager.rs  mod.rs
rust_mm_client/: Cargo.toml
rust_mm_client/cfg/: config-btceth.json  config-eth.json  config-sol.json  config-sol2.json  config-soleth.json  config-solnp.json  config.json  group.json
rust_mm_client/scripts/: build.sh  build_and_run.sh
rust_mm_client/src/: account_info_service.rs  accounts_cache.rs  cypher_group.rs  cypher_user.rs  cypheruser.rs  fast_tx_builder.rs  fasttxnbuilder.rs  logging.rs  main.rs  mm_client  serum_slab.rs  utils.rs
rust_mm_client/src/config/: cypher_config.rs  mm_config.rs  mod.rs
rust_mm_client/src/market_maker/: inventory_manager.rs  market_maker.rs  mod.rs  order_manager.rs  utils.rs  worker.rs
rust_mm_client/src/math/: inventory_manager.rs  inventorymanager.rs  mod.rs  serum_maths.rs  serummaths.rs
rust_mm_client/src/providers/: cypher_account_provider.rs  cypher_group_provider.rs  mod.rs  open_orders_provider.rs  orderbook_provider.rs  utils.rs
rust_mm_client/src/services/: account_info_service.rs  chain_meta_service.rs  mod.rs
src/: Faucet.ts  mm_client.ts  mm_devnet.ts  mmuser.ts  orderviewer.ts  utils.ts
src/livemarket/: live_market.ts  serumlisteners.ts
src/strats/: top.ts
typescript_mm_client/: package.json  tsconfig.json
typescript_mm_client/src/: mm_client.ts  mm_devnet.ts  mm_mainnet.ts  orderviewer.ts
typescript_mm_client/src/livemarket/: live_market.ts  orderbookhandlers.ts
typescript_mm_client/src/oracles/: pythWS.ts
typescript_mm_client/src/strats/: basicSpread.ts  mmstrat.ts  stypes.ts  top.ts
