[package]
name = "rust_mm_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "~1.10.20"
solana-sdk = "~1.10.20" 
tokio = "1.14.1"
num_enum = "0.5.0"
static_assertions = "1.1.0"
serum_dex = "0.5.4"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
cypher = {path="../../cypher-protocol/programs/cypher"}
cypher-tester = {path="../../cypher-protocol/tester"}
