[package]
name = "rust_mm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "~1.10.25"
solana-sdk = "~1.10.25" 
solana-account-decoder = "~1.10.25"
solana-transaction-status = "~1.10.25"
pyth-sdk-solana = "0.4.1"
dashmap = "5.3.4"
tokio = "1.14.1"
futures = "0.3.21"
num_enum = "0.5.0"
static_assertions = "1.1.0"
serum_dex = "0.5.4"
bytemuck = { version = "1.4.0" }
safe-transmute = "0.11.2"
arrayref = "0.3.6"
base64 = "0.13.0"
cypher = { path="../../cypher-protocol/programs/cypher" }
cypher-tester = { path="../../cypher-protocol/tester" }
cypher-math = { path = "../../cypher-protocol/libraries/math" }
anchor-lang = { git = "https://github.com/chugach-foundation/anchor.git", rev="8b75c1a" }
anchor-client = { git = "https://github.com/chugach-foundation/anchor.git", rev="8b75c1a" }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
fraction = "0.10.0"  
spl-math = "0.1.0"
serde = "1.0.137"
serde_json = "1.0.81"
clap = { version = "3.0", features = ["derive"] }
log = "0.4.17"
chrono = "0.4.19"