[package]
name = "rust_mm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "~1.10.25"
solana-sdk = "~1.10.25" 
solana-account-decoder = "~1.10.25"
solana-transaction-status = "~1.10.25"
pyth-sdk-solana = "0.4.1"
dashmap = "5.3.4"
tokio = "1.14.1"
futures = "0.3.21"
num_enum = "0.5.0"
static_assertions = "1.1.0"
serum_dex = { git = "https://github.com/chugach-foundation/serum-dex.git", rev="2fab8b9", features = ["fuzz", "no-entrypoint" ] }
bytemuck = { version = "1.4.0" }
bitflags = "1.3"
safe-transmute = "0.11.2"
arrayref = "0.3.6"
base64 = "0.13.0"
cypher = { path = "../../cypher-protocol/programs/cypher", features = ["no-entrypoint"] }
test-driver = { path = "../../cypher-protocol/programs/test-driver", features = ["no-entrypoint"] }
cypher-tester = { path="../../cypher-protocol/tester" }
jet-proto-math = { git = "https://github.com/chugach-foundation/jet-program-libraries.git", rev="ac8909b" }
jet-proto-proc-macros = { git = "https://github.com/chugach-foundation/jet-program-libraries.git", rev="ac8909b" }
anchor-lang = { git = "https://github.com/chugach-foundation/anchor.git", rev="9131d9f" }
anchor-client = { git = "https://github.com/chugach-foundation/anchor.git", rev="9131d9f" }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = "1.0.5"
fraction = "0.10.0"  
spl-math = "0.1.0"
serde = "1.0.137"
serde_json = "1.0.81"
clap = { version = "3.0", features = ["derive"] }
log = "0.4.17"
chrono = "0.4.19"