[package]
name = "rust_mm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "~1.10.25"
solana-sdk = "~1.10.25" 
solana-account-decoder = "~1.10.25"
solana-transaction-status = "~1.10.25"
pyth-sdk-solana = "0.4.1"
dashmap = "5.3.4"
tokio = "1.14.1"
futures = "0.3.21"
num_enum = "0.5.0"
static_assertions = "1.1.0"
bytemuck = { version = "1.4.0" }
bitflags = "1.3"
safe-transmute = "0.11.2"
arrayref = "0.3.6"
base64 = "0.13.0"
spl-associated-token-account = "1.0.5"
fraction = "0.10.0"  
spl-math = "0.1.0"
serde = "1.0.137"
serde_json = "1.0.81"
clap = { version = "3.0", features = ["derive"] }
log = "0.4.17"
chrono = "0.4.19"
cypher = { git = "https://github.com/chugach-foundation/cypher-cpi.git", rev="34f639c", features = [ "client" ] }
faucet = { git = "https://github.com/chugach-foundation/cypher-cpi.git", rev="34f639c", features = [ "client" ] }
serum_dex = { git = "https://github.com/chugach-foundation/serum-dex.git", rev="2fab8b9", features = ["fuzz", "no-entrypoint" ] }
jet-proto-math = { git = "https://github.com/chugach-foundation/jet-program-libraries.git", rev="ac8909b" }
jet-proto-proc-macros = { git = "https://github.com/chugach-foundation/jet-program-libraries.git", rev="ac8909b" }
anchor-lang = { git = "https://github.com/chugach-foundation/anchor.git", rev="9131d9f" }
anchor-spl = { git = "https://github.com/chugach-foundation/anchor.git", rev="9131d9f", features = ["token", "associated_token", "dex"] }
anchor-client = { git = "https://github.com/chugach-foundation/anchor.git", rev="9131d9f" }